# warwomb

./: .env.sample  .eslintrc.cjs  .gitignore  .parcelrc  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  LICENSE.md  README.md  alembic.ini  cabal.project  nixpacks.toml  package.json  pyproject.toml  railway.json  requirements.txt  tsconfig.json  warwomb.cabal
app/: Main.hs
client/: Dockerfile  index.html  index.tsx  package.json  router.tsx  tsconfig.json
client/components/: Game.tsx  Layout.tsx  MainMenu.tsx  RoutingError.tsx  TokenDisplay.tsx  index.ts
client/src/: index.html  index.tsx
client/src/components/: App.tsx  PageFooter.tsx  Table.tsx  TableToken.tsx  Toolbox.tsx  (+1 more)
migration/: env.py
migration/versions/: 3016f45e7878_make_energy_types_many_to_many.py  6995f4b86457_initial_migration.py  88e62f416acf_add_description_to_weapon_quality.py  9195f2137a84_make_names_unique_for_models.py  f1e356c13464_added_user_and_role_models.py
public/: index.html
qml/: Makefile  dev.qml  main.qml
server/: .env.sample  nixpacks.toml  package.json  pyproject.toml  railway.json  requirements.txt  tsconfig.json
server/prisma/: schema.prisma
server/src/: index.ts
server/static/: index.3588b240.js  index.3588b240.js.map  index.html
server/warwomb/: main.py
src/: App.tsx  PageFooter.tsx  PageHeader.tsx  Ruler.tsx  Table.tsx  TableToken.tsx  Toolbox.tsx  Tooltip.tsx  api.ts  theme.ts  types.ts  utils.ts
src/components/: App.tsx  TableToken.tsx  Toolbox.tsx
static/: index.33a03d67.js  index.33a03d67.js.map  index.4c2c6002.js  index.4c2c6002.js.map  index.7f5b5c79.js  index.7f5b5c79.js.map  index.html
warwomb/: admin.py  auth.py  database.py  main.py  models.py
warwomb-client/: index.html
warwomb-client-old/: package.json
warwomb-client-old/src/: api.ts  index.html  types.ts
warwomb/auth/: authorization_header_elements.py  dependencies.py  json_web_token.py
warwomb/data_files/: warcaster_units.txt
warwomb/routes/: auth.py  crud.py  websockets.py
warwomb/utilities/: seed.py
web/: package.json  tsconfig.json
web/src/: App.tsx  TableToken.tsx  dependencies.d.ts  index.tsx
(+6 files in other folders)
