[tool.poetry]
name = "warwomb"
version = "0.1.0"
description = ""
authors = ["Edwin Marshall <emarshall85@gmail.com>"]
readme = "README.md"
packages = [{include = "warwomb"}]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
websockets = "^11.0"
fastapi = "^0.95.0"
uvicorn = {version = "^0.21.1", extras = ["standard"]}
authlib = "^1.2.0"
sqlmodel = "^0.0.8"
alembic = "^1.10.2"
python-dotenv = "^1.0.0"
psycopg2 = "^2.9.6"
sqladmin = "^0.10.1"
httpx = "^0.23.3"
secure = "^0.3.0"
pyjwt = "^2.6.0"

[tool.poetry.scripts]
start = "warwomb.main:start"


[tool.poetry.group.dev.dependencies]
ptpython = "^3.0.23"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
